# crewaichef

./: README.md  dish.md  pyproject.toml
src/pana/: main.py
src/pana/crews/pana_crew/: chef_crew.py
src/pana/crews/pana_crew/config/: agents.yaml  tasks.yaml
