[project]
name = "pana"
version = "0.1.0"
description = "pana using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "chainlit>=2.3.0",
    "crewai[tools]>=0.98.0,<1.0.0",
]

[project.scripts]
kickoff = "pana.main:kickoff"
rnn = "pana.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
